Improvements & Updates to build process (#15)
Update sbt build system
- update to scala 2.12.12
- update scala-parser-combinators to 1.1.2
- update snakeyaml to 1.26
- update scopt to 3.7.1
- update sbt to 1.3.13
- update sbt-assembly to 0.15.0
- re-write of build.sbt to work with new version of sbt
- delete custom build & run scripts
- update build documentation with direct sbt calls
- adapt Makefiles to direct sbt calls
- remove .idea folder because it seems outdated
- re-structure codebase according to new sbt requirements
- update test-suite to make use of the standalone jar
- update github-actions to profit from new workflow:
  the jar now only needs to be built once for all tests
- update run_djinni.sh scripts to make use of the standalone jar

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,35 +8,48 @@ on:
     - master
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Caching scala & required dependencies
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.sbt
+            ~/.ivy2
+          key: ${{ runner.os }}-scala
+      - name: Building djinni
+        run: make djinni_standalone
+      - uses: actions/upload-artifact@v2
+        with:
+          name: djinni-standalone
+          path: src/target/bin/djinni
   test-objc:
     runs-on: macos-latest
+    needs: build
     steps:
     - uses: actions/checkout@v2
-    - name: Caching scala & required dependencies
-      uses: actions/cache@v2
+    - uses: actions/download-artifact@v2
       with:
-        path: |
-          ~/.sbt
-          ~/.ivy2
-        key: ${{ runner.os }}-scala
-    - name: Building djinni
-      run: make djinni
+        name: djinni-standalone
+        path: src/target/bin
+    - name: Restore file permissions
+      run: chmod u+x src/target/bin/djinni 
     - name: Running objC test
       working-directory: test-suite
       run: make objc
   test-java:
     runs-on: ubuntu-latest
+    needs: build
     steps:
     - uses: actions/checkout@v2
-    - name: Caching scala & required dependencies
-      uses: actions/cache@v2
+    - uses: actions/download-artifact@v2
       with:
-        path: |
-          ~/.sbt
-          ~/.ivy2
-        key: ${{ runner.os }}-scala
-    - name: Building djinni
-      run: make djinni
+        name: djinni-standalone
+        path: src/target/bin
+    - name: Restore file permissions
+      run: chmod u+x src/target/bin/djinni
     - name: Running java test
       working-directory: test-suite
       run: make java
